# MicroServices

./: .gitmodules
auth/jwt/: .gitignore  CMakeLists.txt  compile_commands.json  go.mod  htpassauth.go  main.go
auth/jwt/.cache/clangd/index/: handlers.c.2DCB2AB8BBB1F4F6.idx  handlers.h.84611E88CB34B2CD.idx  main.c.0963EB6822370C40.idx  mongoose.c.61C5922D7EEE71F0.idx  mongoose.h.B6D74DB4965F652D.idx  munit.c.EE8DE50FB1CE9081.idx  munit.h.B208F6F53AF5B818.idx  server.c.74BDEEA24F7712DA.idx  server.h.862FE5DE578FF4FE.idx  tests.c.AFD26676D116ED04.idx
auth/jwt/c_src/: handlers.c  handlers.h  httpasswd.c  httpasswd.h  main.c  server.c  server.h
auth/jwt/c_tests/: main.c  tests.c  tests.h
auth/jwt/go_src/: handlers.go
middlewares/jwtcheck/: jwtcheck.go
